src/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an agreement</description>
   <fields>
        <fullName>APTS_Unit_Net_Price__c</fullName>
        <formula>APTS_Net_Price__c / APTS_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override_template__c</fullName>
        <formula>APTS_Net_Price_Override__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price Override template</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Price__c</fullName>
        <formula>Apttus__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Amount__c</fullName>
        <formula>Apttus_CMConfig__AdjustmentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Amount*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Price__c</fullName>
        <formula>Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__BasePrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Critical_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Critical Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name__c</fullName>
        <formula>IF( Apttus__ProductId__r.APTS_LP_Is_Hierarchy__c , Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.Name, Apttus_CMConfig__DerivedFromId__r.APTS_LP_Product_Description__c)</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discount_Format__c</fullName>
        <formula>IF(APTS_LP_Standard_Discount__c &lt; 0.1, LEFT(SUBSTITUTE(TEXT(APTS_LP_Standard_Discount__c * 100), &quot;.&quot;, &quot;,&quot;), 4), LEFT(SUBSTITUTE(TEXT(APTS_LP_Standard_Discount__c * 100), &quot;.&quot;, &quot;,&quot;), 5))</formula>
        <label>Standard Discount Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percentage__c</fullName>
        <description>Field to hold the value of percentage of discount applied to the line item when selected discount type is either &quot;Substitute Discount&quot; or &quot;Additional Discount&quot;.</description>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <description>Field used by user to select appropriate type of discount in line item.</description>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Price Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <formula>IF(Apttus_CMConfig__NetAdjustmentPercent__c =0,  APTS_Discount_Percentage__c, APTS_Net_Adjustment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
<fields>
        <fullName>APTS_Product_Hierarchy_Information__c</fullName>
        <formula>If( APTS_Product_Is_Hierarchy__c= True, APTS_LP_Hierarchy_Name__c &amp; BR() &amp; &apos;Hierarchy Code:&apos; &amp; CASE(  Apttus__ProductId__r.APTS_Hierarchy_Level__c,2, Apttus__ProductId__r.APTS_LP_Product_Hierarchy__c,3,Apttus__ProductId__r.APTS_Hierarchy_Level_3_Code__c,4, Apttus__ProductId__r.APTS_Hierarchy_Level_4_Code__c,NULL), APTS_Product_Description__c &amp; BR() &amp; &apos;Hierarchy Code:&apos;&amp; Apttus__ProductId__r.APTS_Hierarchy_Level_3_Code__c &amp; BR() &amp; &apos;Local Code:&apos; &amp; APTS_Product_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product/Hierarchy Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Total_Standard_Price__c</fullName>
        <label>Total Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Percent__c</fullName>
        <description>Formula field to copy net adjustment percentage from parent line item</description>
        <formula>Apttus_CMConfig__DerivedFromId__r.APTS_Net_Adjustment_Percentage__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adj. (%) (Do not Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Code__c</fullName>
        <description>Hierarchy Level 3 Code of Product</description>
        <formula>Apttus__ProductId__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTV Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_GTV_Level__c</fullName>
        <formula>(Apttus__ProductId__r.APTS_GTV_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTV Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Global_Product_Code__c</fullName>
        <formula>IF(Apttus__ProductId__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;, Apttus__ProductId__r.APTS_Global_Product_ID__r.APTS_ABB_Global_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Hierarchy_Name__c</fullName>
        <formula>IF( Apttus__ProductId__r.APTS_LP_Is_Hierarchy__c, Apttus__ProductId__r.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Product_Hierarchy_Code__c</fullName>
        <formula>Apttus__ProductId__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Discount__c</fullName>
        <label>Standard Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Net__c</fullName>
        <label>Standard Net</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    <fields>
        <fullName>APTS_LP_Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Price__c</fullName>
        <label>Unit Of Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Number_Custom__c</fullName>
        <label>Line Number*</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Percentage__c</fullName>
        <formula>IF( ISPICKVAL( APTS_Discount_Type__c , &apos;Substitute Discount&apos;) , 
APTS_Discount_Percentage__c 
,IF(ISPICKVAL( APTS_Discount_Type__c , &apos;Additional Discount&apos;), 
APTS_Discount_Percentage__c + APTS_LP_Standard_Discount__c , 
IF(ISPICKVAL( APTS_Discount_Type__c , &apos;Net Price Discount&apos;), 
Apttus_CMConfig__NetAdjustmentPercent__c * -1, NULL) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adj. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment__c</fullName>
        <formula>ABS(Apttus_CMConfig__NetAdjustmentPercent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adjustment* (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <description>Field to hold the new price value (to override existing price value) for the line item when selected discount type is &quot;Net Price Discount&quot; in line item.</description>
        <label>Net Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <formula>Apttus__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <formula>IF( Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;, Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_Product_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Description__c</fullName>
        <formula>IF(Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;,  Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Is_Hierarchy__c</fullName>
        <formula>Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Is Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <formula>Apttus__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Quote_Price__c</fullName>
        <label>Total Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
   <fields>
        <fullName>APTS_new_product_code__c</fullName>
        <inlineHelpText>Summary of the Product and Hierarchy information , for a given line item.</inlineHelpText>
        <label>Product/Hierarchy Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <description>Approval status of the agreement line item</description>
        <inlineHelpText>Approval status of the agreement line item</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved but Action Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Price Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Factor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the asset associated with the product</description>
        <inlineHelpText>ID of the asset associated with the product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item from which the line item is created.</description>
        <inlineHelpText>ID of the associated asset line item from which the line item is created.</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <label>Attribute Value</label>
        <referenceTo>Apttus_CMConfig__AgreementProductAttributeValue__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseCostOverride__c</fullName>
        <description>The base cost overridden by the user</description>
        <inlineHelpText>The base cost overridden by the user</inlineHelpText>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <inlineHelpText>The base cost is Cost + Automatic Adjustments for individual products and options</inlineHelpText>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <inlineHelpText>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</inlineHelpText>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Term (if applicable) X (Base Price + Price Adjustment) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <picklist>
            <picklistValues>
                <fullName>Per Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BasePriceOverride__c</fullName>
        <description>The base price overridden by the user</description>
        <inlineHelpText>The base price overridden by the user</inlineHelpText>
        <label>Base Price (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product.</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items (Base Product)</relationshipLabel>
        <relationshipName>BaseAgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Bill To)</relationshipLabel>
        <relationshipName>AgreementLineItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Bill In Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill In Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ChargeType__c</fullName>
        <description>The charge type associated with the product or service</description>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>License Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ClassificationHierarchy__c</fullName>
        <description>The category hierarchy</description>
        <label>Category Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product category</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Comments__c</fullName>
        <description>Memo text entered by the user</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__CommitmentQuantity__c</fullName>
        <description>The quantity commitment associated with the product or option</description>
        <inlineHelpText>The quantity commitment associated with the product or option</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ContractNumbers__c</fullName>
        <description>A comma separated list of contract numbers associated with the line item</description>
        <inlineHelpText>A comma separated list of contract numbers associated with the line item</inlineHelpText>
        <label>Contract Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Cost__c</fullName>
        <description>The cost for the product or service with no adjustments</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__DerivedFromId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the line item this was derived from</description>
        <label>Derived From</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Derived Agreement Line Items</relationshipLabel>
        <relationshipName>DerivedAgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__EffectiveDate__c</fullName>
        <description>The effective date for products and services</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__EndDate__c</fullName>
        <description>The end date for products and services</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ExtendedCost__c</fullName>
        <description>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</description>
        <inlineHelpText>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ExtendedDescription__c</fullName>
        <description>The extended line description</description>
        <label>Extended Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ExtendedQuantity__c</fullName>
        <description>The extended quantity is Quantity X Parent Quantity)</description>
        <inlineHelpText>The extended quantity is Quantity X Parent Quantity)</inlineHelpText>
        <label>Extended Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FlatOptionPrice__c</fullName>
        <description>The rolled up adjusted flat price of options for the bundle product</description>
        <inlineHelpText>The rolled up adjusted flat price of options for the bundle product</inlineHelpText>
        <label>Flat Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Frequency__c</fullName>
        <description>The pricing frequency associated with the recurring or usage price</description>
        <label>Pricing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__GroupAdjustmentPercent__c</fullName>
        <description>The group adjustment percent</description>
        <label>Group Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Guidance__c</fullName>
        <description>The pricing guidance associated with the line item</description>
        <inlineHelpText>The pricing guidance associated with the line item</inlineHelpText>
        <label>Guidance</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsAssetPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset pricing is in effect for the line item</description>
        <inlineHelpText>Indicates whether asset pricing is in effect for the line item</inlineHelpText>
        <label>Is Asset Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsCustomPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether custom pricing is in effect for the line item</description>
        <inlineHelpText>Indicates whether custom pricing is in effect for the line item</inlineHelpText>
        <label>Is Custom Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsOptionRollupLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is an option rollup line</description>
        <label>Is Option Rollup Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsPrimaryLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the product or option</description>
        <label>Is Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsPrimaryRampLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</description>
        <inlineHelpText>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</inlineHelpText>
        <label>Is Primary Ramp Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ItemSequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sequence of items belonging to a line</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>